[package]
name = "eve"
version = "0.1.0"
authors = ["Chris Granger <ibdknox@gmail.com>"]

[profile.release]
debug = true

[dev-dependencies]
csv = "0.14"

[dependencies]
rand = "0.3.15"
fnv = "1.0.5"
time = "0.1.36"
libc = "*"
lazy_static = "0.2"
tokio-core = "0.1"
tokio-timer = "0.1"
futures = "0.1.14"
ws = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
walkdir = "1"
num = "0.1.39"

[dependencies.nom]
version = "^3.1"
features = ["verbose-errors"]
