[package]
name = "eve"
version = "0.4.0"
authors = ["Chris Granger <ibdknox@gmail.com>"]

[profile.release]
debug = true

[dev-dependencies]
csv = "0.14"

[dependencies]
rand = "0.3.15"
fnv = "1.0.5"
time = "0.1.36"
libc = "*"
lazy_static = "0.2"
ws = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
walkdir = "1"
num = "0.1.39"
bincode = "0.8"
clap = "2.25"
term-painter = "0.2.3"
unicode-segmentation = "1.1.0"
iron = "0.5"
staticfile = "0.4"
mount = "0.3"
natord = "1.0.9"
notify = "4.0.0"
